--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   postgres:
     image: postgres
-    # restart: always
+    restart: always
     environment:
       POSTGRES_PASSWORD: postgres
     ports: 
