--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -7,3 +7,5 @@ services:
       POSTGRES_PASSWORD: postgres
     ports: 
       - 5433:5432
+    volumes: 
+      - /root/postgres/data:/var/lib/postgresql/data
