--- a/mongo/mongo4-bionic/docker-compose.yml
+++ b/mongo/mongo4-bionic/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   mongo:
-    image: mongo
+    image: mongo:4-bionic
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
