--- a/mysql/mysql57/docker-compose.yml
+++ b/mysql/mysql57/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services: 
-  mysql80_3306:
+  mysql57:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     volumes: 
