--- a/mysql/mysql80/docker-compose.yml
+++ b/mysql/mysql80/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services: 
-  mysql80_3307:
+  mysql80:
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     volumes: 
@@ -8,5 +8,5 @@ services:
     environment: 
       MYSQL_ROOT_PASSWORD: root
     ports: 
-      - 3307:3306
+      - 3306:3306
     restart: always
