--- a/elasticsearch/elasticsearch76/docker-compose.yml
+++ b/elasticsearch/elasticsearch76/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services: 
   elasticsearch76:
-    image: elasticsearch:7.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
     ports: 
       - 9200:9200
       - 9300:9300
