--- a/elasticsearch/elasticsearch76/docker-compose.yml
+++ b/elasticsearch/elasticsearch76/docker-compose.yml
@@ -9,3 +9,4 @@ services:
       - /root/elasticsearch/761/data:/usr/share/elasticsearch/data
     environment: 
       - discovery.type:single-node
+    privileged: true
