--- a/elasticsearch/elasticsearch76/docker-compose.yml
+++ b/elasticsearch/elasticsearch76/docker-compose.yml
@@ -1,12 +1,14 @@
 version: "3"
 services: 
   elasticsearch76:
-    image: elasticsearch:7.6.1
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports: 
       - 9200:9200
       - 9300:9300
     volumes: 
-      - /root/elasticsearch/761/data:/usr/share/elasticsearch/data
+      - /root/elasticsearch/76/data:/usr/share/elasticsearch/data
     environment: 
       - discovery.type:single-node
     privileged: true
