--- a/solr/solr84/docker-compose.yml
+++ b/solr/solr84/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3"
 services: 
   solr84:
-    image: solr:8.4
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports: 
       - 8983:8983
     volumes: 
