--- a/elasticsearch/elasticsearch76/docker-compose.yml
+++ b/elasticsearch/elasticsearch76/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - 9300:9300
     volumes: 
       - /root/elasticsearch/76/data:/usr/share/elasticsearch/data
+      - /root/elasticsearch/76/logs::/usr/share/elasticsearch/logs
     environment: 
       - discovery.type:single-node
     privileged: true
