--- a/mysql/percona/docker-compose.yml
+++ b/mysql/percona/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports: 
       - 3306:3306
     volumes: 
-      - /root/mysql/percona:/var/lib/mysql
+      - ./data:/var/lib/mysql
     environment: 
       MYSQL_ROOT_PASSWORD: root
     restart: always
