--- a/rabbitmq/docker-compose.yml
+++ b/rabbitmq/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - 15672:15672
       - 5672:5672
     volumes: 
-      - /root/rabbit/data:/var/lib/rabbitmq/mnesia/
+      - ./data:/var/lib/rabbitmq/mnesia/
     environment: 
       RABBITMQ_DEFAULT_USER: root
       RABBITMQ_DEFAULT_PASS: root
