--- a/mysql/mariadb/docker-compose.yml
+++ b/mysql/mariadb/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mariadb:10.5.1
     command: --default-authentication-plugin=mysql_native_password
     volumes: 
-      - /root/mysql/mariadb/:/var/lib/mysql
+      - ./data:/var/lib/mysql
     environment: 
       MYSQL_ROOT_PASSWORD: root
     ports: 
