--- a/mysql/mysql57/docker-compose.yml
+++ b/mysql/mysql57/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     volumes: 
-      - /root/mysql/57/:/var/lib/mysql
+      - ./data:/var/lib/mysql
     environment: 
       MYSQL_ROOT_PASSWORD: root
     ports: 
