--- a/postgres/postgres10/docker-compose.yml
+++ b/postgres/postgres10/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     ports: 
       - 5433:5432
     volumes: 
-      - /root/postgres/10/data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
