--- a/elasticsearch/elasticsearch68/docker-compose.yml
+++ b/elasticsearch/elasticsearch68/docker-compose.yml
@@ -1,9 +1,8 @@
-version: "3"
+version: "2.2"
 services: 
-  elasticsearch68:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+  elasticsearch76:
+    mem_limit: 2048m
+    image: elasticsearch:6.8.1
     ports: 
       - 9200:9200
       - 9300:9300
