--- a/elasticsearch/elasticsearch76/docker-compose.yml
+++ b/elasticsearch/elasticsearch76/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.2"
 services: 
   elasticsearch76:
-    mem_limit: 2048m
+    mem_limit: 2g
     image: elasticsearch:7.6.1
     ports: 
       - 9200:9200
