--- a/solr/solr84/docker-compose.yml
+++ b/solr/solr84/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     ports: 
       - 8983:8983
     volumes: 
-      - ./data:/var/solr
+      - ./data:/var/solr/data
     privileged: true
