--- a/tomcat/tomcat8-8/docker-compose.yml
+++ b/tomcat/tomcat8-8/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3"
 services: 
-  tomcat90_8:
+  tomcat8_8:
     image: tomcat:8-jdk8
     ports: 
       - 8080:8080
     volumes: 
-      - /root/tomcat/tomcat9/webapps:/usr/local/tomcat/webapps
-      - /root/tomcat/tomcat9/logs:/usr/local/tomcat/logs
+      - ./webapps:/usr/local/tomcat/webapps
+      - ./logs:/usr/local/tomcat/logs
     restart: always
