--- a/elasticsearch/elasticsearch761/Dockerfile
+++ b/elasticsearch/elasticsearch761/Dockerfile
@@ -1,3 +1,3 @@
 FROM docker.elastic.co/elasticsearch/elasticsearch:7.6.1
-RUN ./bin/elasticsearch-plugin install https://github.com/medcl/elasticsearch-analysis-ik/releases/download/v7.6.1/elasticsearch-analysis-ik-7.6.1.zip
-RUN ./bin/elasticsearch-plugin install https://github.com/medcl/elasticsearch-analysis-pinyin/releases/download/v7.6.1/elasticsearch-analysis-pinyin-7.6.1.zip
+COPY ./analysis-ik /usr/share/elasticsearch/plugins/analysis-ik
+COPY ./analysis-pinyin /usr/share/elasticsearch/plugins/analysis-pinyin
