--- a/elasticsearch/elasticsearch681/Dockerfile
+++ b/elasticsearch/elasticsearch681/Dockerfile
@@ -1,3 +1,3 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:6.8.1
+FROM elasticsearch:6.8.1
 COPY ./analysis-ik /usr/share/elasticsearch/plugins/analysis-ik
 COPY ./analysis-pinyin /usr/share/elasticsearch/plugins/analysis-pinyin
