--- a/elasticsearch/elasticsearch761/Dockerfile
+++ b/elasticsearch/elasticsearch761/Dockerfile
@@ -1,3 +1,3 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:7.6.1
+FROM elasticsearch:7.6.1
 COPY ./analysis-ik /usr/share/elasticsearch/plugins/analysis-ik
 COPY ./analysis-pinyin /usr/share/elasticsearch/plugins/analysis-pinyin
