--- a/elasticsearch/elasticsearch761/docker-compose.yml
+++ b/elasticsearch/elasticsearch761/docker-compose.yml
@@ -5,11 +5,12 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - node.name:es01
-      - cluster.name:es-docker-cluster
-      - cluster.initial_master_nodes:es01
-      - bootstrap.memory_lock:true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+      # - node.name:es01
+      # - cluster.name:es-docker-cluster
+      # - cluster.initial_master_nodes:es01
+      # - bootstrap.memory_lock:true
+      # - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
         soft: -1
