--- a/spring-boot/app01/docker-compose.yml
+++ b/spring-boot/app01/docker-compose.yml
@@ -8,17 +8,5 @@ services:
     privileged: true
     ports: 
       - 8101:8081
-    depends_on: 
-      - mysql80
-    links: 
-      - mysql80:mysql
-  mysql80:
-    image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
-    volumes: 
-      - ./data:/var/lib/mysql
-    environment: 
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: app_01
-    restart: always
-    privileged: true
+    networks: 
+      - spring_boot_app
